--- a/main.css
+++ b/main.css
@@ -511,9 +511,10 @@ label {
         display: flex;
         flex-wrap: wrap;
         justify-content: center;
-        padding: 418px 0 0 0;
+        padding: 528px 0 0 0;
         margin-top: 0;
         text-align: center;
+        width: 100%;
     }
     input.abas:checked + label {
         background-image: linear-gradient(#000000, #0073ec);
