--- a/css/main.css
+++ b/css/main.css
@@ -26,7 +26,7 @@
 /* Background body */
 body {        
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    background-image: url(../images/technology.png);
+    background-image: url(Startup_IoT_ProjetoLM/images/technology.png);
     background-color: #000000;
     background-position-y: 82px;
     background-repeat: no-repeat;
