--- a/main.css
+++ b/main.css
@@ -315,7 +315,7 @@ label {
     left: 429px;
 } 
 .hospitalar a {
-    background-image: url(images/hospitalar.png);
+    background-image: url(images/hospital.png);
     background-position: -10px;
 }
 
