--- a/main.css
+++ b/main.css
@@ -51,7 +51,7 @@ body {
 .startup h2 {
     text-align: center;
     color: white;
-    margin: 0;
+    margin: -12px 0 0 0;
 }
 
 .startup h1, h2 {
@@ -424,7 +424,7 @@ label {
     body {
         flex-direction: column;
         align-items: center;
-        background-position-y: 46px;
+        background-position-y: 10px;
     }
 
     .portfolio {
@@ -443,6 +443,7 @@ label {
     }
     .startup {
         margin: -15px 0 0 0;
+        width: inherit;
     }    
     .orbital {
         display: grid;
@@ -513,7 +514,7 @@ label {
         display: flex;
         flex-wrap: wrap;
         justify-content: center;
-        padding: 528px 0 0 0;
+        padding: 415px 0 0 0;
         margin-top: 0;
         text-align: center;
         width: 100%;
