--- a/main.css
+++ b/main.css
@@ -429,11 +429,10 @@ label {
 
     .portfolio {
         font-size: 32px;
-        font-weight: bolder;
-        text-shadow: 0 0 20px black;
         border-radius: 45px;
-        background-image: radial-gradient(circle at center, #0072ec, 36%, #fff0);
-        top: -63px;
+        height: 200px;
+        width: 100%;
+        top: 63px;
         left: 0px;
         z-index: -1;
     }
@@ -447,6 +446,8 @@ label {
         grid-template-columns: repeat(3, 109px);
         grid-row-gap: 10px;
         top: 77px;
+        width: 40%;
+        justify-content: center;
         justify-items: center;
     }
     .portfolio a {
