--- a/main.css
+++ b/main.css
@@ -422,9 +422,8 @@ label {
 @media (max-width: 600px) {
 
     body {
-        flex-direction: column;
-        align-items: center;
-        background-position-y: 50px;
+        background-position-y: -12px;
+        background-position-x: -507px;
     }
     
     .startup {
@@ -448,6 +447,11 @@ label {
         display: flex;
         align-items: center;
         justify-content: center;
+    }
+    
+    input.abas + label + div {    
+    display: flex;
+    justify-content: center;
     }
     
     input.abas:checked + label {
