--- a/main.css
+++ b/main.css
@@ -428,18 +428,16 @@ label {
     
     .startup {
         margin: -15px 0 0 0;
-        width: inherit;
+        width: unset;
         text-align: center;
     }  
     
     .abas-container {
         display: flex;
-        flex-wrap: wrap;
         justify-content: center;
         padding: 365px 0 0 0;
-        margin-top: 0;
-        text-align: center;
-        width: 100%;
+        margin: auto;
+        width: 333px;
     }
     
     label a {
@@ -451,6 +449,7 @@ label {
         display: flex;
         align-items: center;
         justify-content: center;
+        border-radius: 0 0 5px 5px;
     }
     
     input.abas + label + div {    
@@ -460,8 +459,9 @@ label {
     
     input.abas:checked + label {
         padding-bottom: 0;
+        background-image: linear-gradient(#000000, #0073ec);
     }
-    
+       
     .iot {
         display: none;
     }
@@ -521,15 +521,14 @@ label {
     }
         
     div#social {
-        display: inline;
-        top: 535px;
+        display: block;
         text-align: center;
-        justify-content: center;
-        width: 100%;
+        top: 510px;
+        width: inherit;
+        right: auto;
     }
     
     #social .fa-envira {
-        color: white;
         font-size: 25px;
         position: inherit;
     }    
