--- a/main.css
+++ b/main.css
@@ -106,7 +106,10 @@ input.abas + label {
     transition: ease-in-out .3s;
     border-radius: 5px 5px 0 0;
     z-index: 99999;
-    font-family: inherit;
+}
+
+input.fas a {
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     font-weight: 500;
 }
 
