--- a/main.css
+++ b/main.css
@@ -141,7 +141,7 @@ main {
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 75%;
+    height: 540px;
 }
 
 main form {
