--- a/main.css
+++ b/main.css
@@ -125,7 +125,7 @@ input.abas:checked + label {
 }
 
 label {
-    background-image: linear-gradient(#ffffff, #000);
+    background-image: linear-gradient(#000000, #ffffff);
     text-decoration-line: none;
     font-weight: 500;
     color: white;
