--- a/main.css
+++ b/main.css
@@ -287,6 +287,7 @@ main form input, textarea {
 /* Menu Orbital do Portfólio IoT */
 .orbital {
     position: absolute;
+    top: -60px;
 }
 
 .wearable {
