--- a/main.css
+++ b/main.css
@@ -156,7 +156,7 @@ main {
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 89%;
+    height: 572px;
 }
 
 main form {
