--- a/main.css
+++ b/main.css
@@ -119,6 +119,7 @@ label.fas:before {
 /* Conteúdo da Aba Produtos */
 .produtos {
     display: flex;
+    justify-content: center;
     align-items: center;
     flex-direction: column;
 }
