--- a/main.css
+++ b/main.css
@@ -584,3 +584,41 @@ main form input, textarea {
         outline: none;
     }
 }
+
+
+@media (min-width: 600px) and (max-width: 1200px) {
+    .startup {
+        align-items: center;
+        margin: unset;
+        width: 100%;
+     }  
+    
+    .abas-container {
+        position: fixed;
+        display: flex;
+        justify-content: center;
+        width: 100%;
+        padding-top: 100px;
+     }
+     .orbital {
+        
+     }
+     
+     .portfolio {
+         
+     }
+     
+     .portfolio a {
+  
+     }
+ 
+     .menuport {
+  
+     }
+     
+     .menuport a {
+  
+     }
+     
+ }
+ 
